--- a/architecture-examples/yui/index.html
+++ b/architecture-examples/yui/index.html
@@ -17,14 +17,13 @@
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list"></ul>
 		</section>
-		<footer id="footer"></div>
 	</section>
-	<div id="info">
+	<footer id="footer">
 		<p>Double-click to edit a todo</p>
-        <p>Created by
-          <a href="https://github.com/clarle">Clarence Leung</a> and
-          <a href="https://twitter.com/ericf">Eric Ferraiuolo</a>
-        </p>
+		<p>Created by
+			<a href="https://github.com/clarle">Clarence Leung</a> and
+			<a href="https://twitter.com/ericf">Eric Ferraiuolo</a>
+		</p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 
