--- a/labs/architecture-examples/canjs/index.html
+++ b/labs/architecture-examples/canjs/index.html
@@ -10,18 +10,22 @@
 	<![endif]-->
 </head>
 <body>
-	<section id="todoapp"></section>
-	<div id="info">
-		<p>Double-click to edit a todo</p>
-		<p>Written by <a href="http://bitovi.com">Bitovi</a></p>
-		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-	</div>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
-	<script src="../../../assets/base.js"></script>
-	<script src="js/lib/can.jquery-1.0.7.min.js"></script>
-	<script src="js/lib/can-localstorage.min.js"></script>
-	<script src="js/models/todo.js"></script>
-	<script src="js/todos/todos.js"></script>
-	<script src="js/app.js"></script>
+<section id="todoapp">
+</section>
+<div id="info">
+  <p>Double-click to edit a todo</p>
+  <p>Written by <a href="http://bitovi.com">Bitovi</a></p>
+  <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+</div>
+
+<script src="../../../assets/jquery.min.js"></script>
+<script src="../../../assets/base.js"></script>
+
+<script src="js/lib/can.jquery-1.1.0.min.js"></script>
+<script src="js/lib/can.mustache.min.js"></script>
+<script src="js/lib/can.localstorage.min.js"></script>
+<script src="js/models/todo.js"></script>
+<script src="js/todos/todos.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
