--- a/vanilla-examples/vanillajs/index.html
+++ b/vanilla-examples/vanillajs/index.html
@@ -4,10 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>VanillaJS • TodoMVC</title>
-	<link rel="stylesheet" href="../../assets/base.css">
-	<!--[if IE]>
-	<script src="../../assets/ie.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" href="components/todomvc-common/base.css">
 </head>
 <body>
 	<section id="todoapp">
@@ -22,16 +19,31 @@
 		</section>
 		<footer id="footer">
 			<span id="todo-count"></span>
+			<ul id="filters">
+				<li>
+					<a href="#/">All</a>
+				</li>
+				<li>
+					<a href="#/active">Active</a>
+				</li>
+				<li>
+					<a href="#/completed">Completed</a>
+				</li>
+			</ul>
 			<button id="clear-completed">Clear completed</button>
 		</footer>
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Created by <a href="http://twitter.com/ffesseler">Florian Fesseler</a></p>
-		<p>Cleanup, edits by <a href="http://github.com/boushley">Aaron Boushley</a></p>
-		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+		<p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
 	</footer>
-	<script src="../../assets/base.js"></script>
+	<script src="components/todomvc-common/base.js"></script>
+	<script src="components/director/build/director.js"></script>
+	<script src="js/helpers.js"></script>
+	<script src="js/store.js"></script>
+	<script src="js/model.js"></script>
+	<script src="js/view.js"></script>
+	<script src="js/controller.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
