animate developer quotes randomly.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		</div>
 		<hr>
 		<div class="row">
-			<div class="span6">
+			<div class="span6 quotes">
 				<blockquote class="quote speech-bubble">
 					<p></p>
 					<footer>
