Add Chaplin to readme and site

--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
 					<li class="routing">
 						<a href="labs/architecture-examples/dart/web/" data-source="http://dartlang.org" data-content="Dart firstly targets the development of modern and large scale browser-side web apps. It's an object oriented language with a C-style syntax. It has two run modes : it can be compiled to JS, and will later run in native VM in compliant browsers (just in a dedicated Chromium provided with Dart SDK for the moment).">Dart</a>
 					</li>
+					<li class="routing">
+						<a href="labs/dependency-examples/chaplin-brunch/public/" data-source="http://chaplinjs.org" data-content="Chaplin is an architecture for JavaScript applications using the Backbone.js library. Chaplin addresses Backbone’s limitations by providing a lightweight and flexible structure that features well-profen design patterns and best practises.">Chaplin + Brunch</a>
+					</li>
 				</ul>
 			</div>
 		</div>
