rewrite Maria TodoMVC example to use the latest version of Maria and the new TodoMVC template

--- a/labs/architecture-examples/maria/src/index.html
+++ b/labs/architecture-examples/maria/src/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>To-do App</title>
+    <meta charset="utf-8">
+    <title>Maria • TodoMVC</title>
 
-    <link href="css/todos.css" rel="stylesheet" type="text/css">
+    <link href="css/base.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
 
 </head>
 <body>
@@ -17,22 +19,15 @@
 
     <script src="../lib/maria/maria.js"></script>
     <script src="../lib/aristocrat/aristocrat.js"></script>
+    <script src="../lib/director/director.js"></script>
 
     <script src="js/namespace.js"></script>
+    <script src="js/util.js"></script>
     <script src="js/models/TodoModel.js"></script>
     <script src="js/models/TodosModel.js"></script>
-    <script src="js/templates/TodosInputTemplate.js"></script>
-    <script src="js/views/TodosInputView.js"></script>
-    <script src="js/templates/TodosListTemplate.js"></script>
-    <script src="js/views/TodosListView.js"></script>
-    <script src="js/templates/TodosToolbarTemplate.js"></script>
-    <script src="js/views/TodosToolbarView.js"></script>
-    <script src="js/controllers/TodosToolbarController.js"></script>
-    <script src="js/templates/TodosStatsTemplate.js"></script>
-    <script src="js/views/TodosStatsView.js"></script>
-    <script src="js/templates/TodosAppTemplate.js"></script>
-    <script src="js/views/TodosAppView.js"></script>
-    <script src="js/controllers/TodosInputController.js"></script>
+    <script src="js/templates/TodosTemplate.js"></script>
+    <script src="js/views/TodosView.js"></script>
+    <script src="js/controllers/TodosController.js"></script>
     <script src="js/templates/TodoTemplate.js"></script>
     <script src="js/views/TodoView.js"></script>
     <script src="js/controllers/TodoController.js"></script>
