Adding routing label to JMVC app.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<li class="labs">
 						<a href="labs/architecture-examples/montage/" data-source="https://github.com/Motorola-Mobility/montage" data-content="Montage simplifies the development of rich HTML5 applications by providing modular components, real-time two-way data binding, CommonJS dependency management, and many more conveniences.">Montage</a>
 					</li>
-					<li class="labs">
+					<li class="routing labs">
 						<a href="labs/architecture-examples/javascriptmvc/todo" data-source="http://javascriptmvc.com" data-content="JavaScriptMVC is an open-source framework containing the best ideas in jQuery development. It guides you to successfully completed projects by promoting best practices, maintainability, and convention over configuration.">JavaScriptMVC</a>
 					</li>
 					<li class="labs">
