added js as requested, fixed bugs

--- a/labs/architecture-examples/angularjs_typescript/index.html
+++ b/labs/architecture-examples/angularjs_typescript/index.html
@@ -63,7 +63,7 @@
      </p>
   </footer>
   <script src="../../../assets/base.js"></script>
-  <script src="js/libs/angular/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
   <script src="js/controllers/TodoCtrl.js"></script>
   <script src="js/services/TodoStorage.js"></script>
   <script src="js/directives/TodoFocus.js"></script>
