--- a/architecture-examples/canjs/index.html
+++ b/architecture-examples/canjs/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>CanJS • TodoMVC</title>
-	<link rel="stylesheet" href="../../../assets/base.css">
+	<link rel="stylesheet" href="../../assets/base.css">
 	<!--[if IE]>
-	<script src="../../../assets/ie.js"></script>
+	<script src="../../assets/ie.js"></script>
 	<![endif]-->
 </head>
 <body>
@@ -18,8 +18,8 @@
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </div>
 
-<script src="../../../assets/jquery.min.js"></script>
-<script src="../../../assets/base.js"></script>
+<script src="../../assets/jquery.min.js"></script>
+<script src="../../assets/base.js"></script>
 
 <script src="js/lib/can.jquery-1.1.0.min.js"></script>
 <script src="js/lib/can.mustache.min.js"></script>
