Removed dot after "items left" for dojo and extjs

--- a/architecture-examples/dojo/js/todo/app.html
+++ b/architecture-examples/dojo/js/todo/app.html
@@ -27,7 +27,7 @@
             <strong>
                 <span data-dojo-type="dojox.mvc.Output" data-dojo-props="ref: this.model.incomplete" class="number"></span>
             </strong>
-            <span class="word">item<span class="plural">s</span></span> left.
+            <span class="word">item<span class="plural">s</span></span> left
         </span>
 	    <!-- Remove this if you don't implement routing -->
 		<ul id="filters">
