--- a/architecture-examples/dojo/js/todo/app18.html
+++ b/architecture-examples/dojo/js/todo/app18.html
@@ -58,7 +58,7 @@
 				 data-dojo-props="_setSingleAttr: {type: 'classExists', className: 'plural'},
 				                  constraints: {lessThanOrEqualTo: 1},
 				                  single: at(${id}_ctrl, 'incomplete').transform(LessThanOrEqualToConverter)">s</span></span>
-			left.
+			left
 		</span>
 		<!-- Remove this if you don't implement routing -->
 		<ul id="filters">
