--- a/labs/architecture-examples/maria/src/index.html
+++ b/labs/architecture-examples/maria/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Maria • TodoMVC</title>
 
-    <link href="css/base.css" rel="stylesheet">
+    <link href="../../../../assets/base.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 
 </head>
@@ -19,7 +19,7 @@
 
     <script src="../lib/maria/maria.js"></script>
     <script src="../lib/aristocrat/aristocrat.js"></script>
-    <script src="../lib/director/director.js"></script>
+    <script src="../../../../assets/director.min.js"></script>
 
     <script src="js/namespace.js"></script>
     <script src="js/util.js"></script>
