Adding initial TypeScript + Backbone app for #359, updating lab link colors to maroon, correcting app count.

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 						<a href="labs/architecture-examples/rappidjs/" data-source="http://www.rappidjs.com" data-content="rAppid.js is a declarative JavaScript framework for rapid web application development. It supports dependency loading, Model-View binding, View-Model binding, dependency injection and i18n.">rAppid.js</a>
 					</li>
 					<li class="routing labs">
-						<a href="labs/architecture-examples/o_O/" data-source="http://weepy.github.com/o_O/" data-content="o_O: HTML binding for teh lulz: &lt;br> - Elegantly binds objects to HTML&lt;br>- Proxies through jQuery, Ender, etc&lt;br>- Automatic dependency resolution&lt;br>- Plays well with others">Funnyface.js</a>
+						<a href="labs/architecture-examples/o_O/" data-source="http://weepy.github.com/o_O/" data-content="o_O: HTML binding &lt;br> - Elegantly binds objects to HTML&lt;br>- Proxies through jQuery, Ender, etc&lt;br>- Automatic dependency resolution&lt;br>- Plays well with others">Funnyface.js</a>
 					</li>
 					<li class="routing labs">
-						<a href="labs/architecture-examples/knockoutjs_classBindingProvider/" data-source="https://github.com/rniemeyer/knockout-classBindingProvider" data-content="This project is an adaptation of /architecture-examples/knockoutjs with Ryan Niemeyer's Class Binding Provider.">Knockout +</br> ClassBindingProvider</a>
+						<a href="labs/architecture-examples/knockoutjs_classBindingProvider/" data-source="https://github.com/rniemeyer/knockout-classBindingProvider" data-content="This project is an adaptation of /architecture-examples/knockoutjs with Ryan Niemeyer's Class Binding Provider.">Knockout +</br> ClassBinding</a>
 					</li>
 					<li class="routing labs">
-						<a href="architecture-examples/angularjs-perf/" data-source="http://angularjs.org" data-content="What HTML would have been had it been designed for web apps. A version with several performance optimizations.">AngularJS (optimized)</a>
+						<a href="architecture-examples/angularjs-perf/" data-source="http://angularjs.org" data-content="What HTML would have been had it been designed for web apps. A version with several performance optimizations.">AngularJS </br>(optimized)</a>
 					</li>
 				</ul>
 				<hr>
@@ -145,6 +145,9 @@
 					</li>
 					<li>
 						<a href="architecture-examples/gwt/" data-source="https://developers.google.com/web-toolkit/" data-content="Google Web Toolkit (GWT) is an MVP development toolkit for building and optimizing complex browser-based applications. GWT is used by many products at Google, including Google AdWords.">GWT</a>
+					</li>
+					<li class="labs">
+						<a href="labs/architecture-examples/typescript-backbone/" data-source="https://typescript.com" data-content="TypeScript is a language for application-scale JavaScript development. It offers classes, modules, interfaces and type-checking at compile time to help you build robust components.">TypeScript </br>+ Backbone.js</a>
 					</li>
 					<li class="routing">
 						<a href="architecture-examples/closure/" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure</a>
@@ -210,7 +213,7 @@
 					</li>
 				</ul>
 				<p>* <span class="label">R</span> = App also demonstrates routing</p>
-				<p>* Gray = App requires further work to be spec-compliant</p>
+				<p>* Maroon = App requires further work to be spec-compliant</p>
 			</div>
 		</div>
 		<hr>
@@ -235,7 +238,7 @@
 				<ul class="whats-new">
 					<li>All main apps have been completely rewritten for consistency</li>
 					<li>Routing has been added to many of these</li>
-					<li>We now have 30+ apps being worked on in Labs</li>
+					<li>We now have 40+ apps being worked on in Labs</li>
 					<li>We're using a kick-ass new template</li>
 					<li>Framework authors and contributors have been consulted to ensure our apps adhere to best practices</li>
 					<li>We're helping AMD users by adding AMD versions of many apps</li>
