--- a/labs/architecture-examples/angularjs_typescript/index.html
+++ b/labs/architecture-examples/angularjs_typescript/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>AngularJS - TodoMVC</title>
+  <title>AngularJS + Typescript - TodoMVC</title>
   <link rel="stylesheet" href="../../../assets/base.css">
   <style>[ng-cloak] {display: none}</style>
   <!--[if IE]>
@@ -58,16 +58,18 @@
     <p>Credits:
         <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
         <a href="http://ericbidelman.com">Eric Bidelman</a>,
-        <a href="http://jacobmumm.com">Jacob Mumm</a> and
-        <a href="http://igorminar.com">Igor Minar</a>
+        <a href="http://jacobmumm.com">Jacob Mumm</a> 
+        <a href="http://igorminar.com">Igor Minar</a> and
+        <a href="http://zamboch.blogspot.com">Pavel Savara</a>
      </p>
   </footer>
   <script src="../../../assets/base.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
+  <script src="js/libs/angular/angular.min.js"></script>
+  <script src="js/models/TodoItem.js"></script>
   <script src="js/controllers/TodoCtrl.js"></script>
   <script src="js/services/TodoStorage.js"></script>
   <script src="js/directives/TodoFocus.js"></script>
   <script src="js/directives/TodoBlur.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/Application.js"></script>
 </body>
 </html>
