--- a/architecture-examples/emberjs/index.html
+++ b/architecture-examples/emberjs/index.html
@@ -1,80 +1,89 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>ember.js • TodoMVC</title>
-	<link rel="stylesheet" href="../../assets/base.css">
-	<!--[if IE]>
-	<script src="../../assets/ie.js"></script>
-	<![endif]-->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>ember.js • TodoMVC</title>
+  <link rel="stylesheet" href="../../assets/base.css">
+  <!--[if IE]>
+  <script src="../../assets/ie.js"></script>
+  <![endif]-->
 </head>
 <body>
-	<section id="todoapp"></section>
-	<footer id="info">
-		<p>Double-click to edit a todo</p>
-		<p>
-			Created by
-			<a href="http://github.com/tomdale">Tom Dale</a>,
-			<a href="http://github.com/addyosmani">Addy Osmani</a>
-		</p>
-		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-	</footer>
-	<!-- /* Handlebars templates start */ -->
-	<script id="statsTemplate" type="text/x-handlebars">
-		{{#with view}}
-			{{#if oneLeft }}
-				<strong>{{entries.remaining}}</strong> item left
-			{{else}}
-				<strong>{{entries.remaining}}</strong> items left
-			{{/if}}
-		{{/with}}
-	</script>
-	<script id="filtersTemplate" type="text/x-handlebars">
-		<ul id="filters">
-			<li>
-				<a {{action showAll href=true}} {{bindAttr class="view.isAll:selected"}}>All</a>
-			</li>
-			<li>
-				<a {{action showActive href=true}} {{bindAttr class="view.isActive:selected"}}>Active</a>
-			</li>
-			<li>
-				<a {{action showCompleted href=true}} {{bindAttr class="view.isCompleted:selected"}}>Completed</a>
-			</li>
-		</ul>
-	</script>
-	<script id="clearBtnTemplate" type="text/x-handlebars">
-		{{#with view}}
-			<button {{action "clearCompleted" target="entries"}} {{bindAttr class="buttonClass:hidden"}} >
-				Clear completed ({{entries.completed}})
-			</button>
-		{{/with}}
-	</script>
-	<script id="todosTemplate" type="text/x-handlebars">
-		{{#unless view.content.editing}}
-			{{view Ember.Checkbox checkedBinding="view.content.completed" class="toggle"}}
-			<label>{{view.content.title}}</label>
-			<button {{action removeItem target="this"}} class="destroy" ></button>
-		{{else}}
-			{{view view.ItemEditorView contentBinding="view.content"}}
-		{{/unless}}
-	</script>
-	<script>
-	// Workaround until Ember 1.0 is released
-	var ENV = {'FORCE_JQUERY': true};
-	</script>
-	<!-- /* Handlebars templates end */ -->
-	<script src="../../assets/base.js"></script>
-	<script src="../../assets/jquery.min.js"></script>
-	<script src="../../assets/handlebars.min.js"></script>
-	<script src="js/libs/ember-latest.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/router.js"></script>
-	<script src="js/models/todo.js"></script>
-	<script src="js/models/store.js"></script>
-	<script src="js/controllers/entries.js"></script>
-	<script src="js/controllers/todos.js"></script>
-	<script src="js/views/application.js"></script>
-	<script src="js/views/todos.js"></script>
+  <script type="text/x-handlebars" data-template-name="todos">
+    <section id="todoapp">
+      <header id="header">
+        <h1>todos</h1>
+        {{view Ember.TextField id="new-todo" placeholder="What needs to be done?"
+               valueBinding="newTitle" action="createTodo"}}
+      </header>
+
+      {{#if length}}
+        <section id="main">
+          <ul id="todo-list">
+            {{#each filteredTodos itemController="todo"}}
+              <li {{bindAttr class="isCompleted:completed isEditing:editing"}}>
+                {{#if isEditing}}
+                  {{view Todos.EditTodoView todoBinding="this"}}
+                {{else}}
+                  {{view Ember.Checkbox checkedBinding="isCompleted" class="toggle"}}
+                  <label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
+                  <button {{action "removeTodo"}} class="destroy"></button>
+                {{/if}}
+                </li>
+            {{/each}}
+          </ul>
+          {{view Ember.Checkbox id="toggle-all" checkedBinding="allAreDone"}}
+        </section>
+
+        <footer id="footer">
+          <span id="todo-count">{{{remainingFormatted}}}</span>
+          <ul id="filters">
+            <li>
+              {{#linkTo todos.index activeClass="selected"}}All{{/linkTo}}
+            </li>
+            <li>
+              {{#linkTo todos.active activeClass="selected"}}Active{{/linkTo}}
+            </li>
+            <li>
+              {{#linkTo todos.completed activeClass="selected"}}Completed{{/linkTo}}
+            </li>
+          </ul>
+
+          {{#if hasCompleted}}
+            <button id="clear-completed" {{action "clearCompleted"}} {{bindAttr class="buttonClass:hidden"}}>
+              Clear completed ({{completed}})
+            </button>
+          {{/if}}
+        </footer>
+      {{/if}}
+    </section>
+
+    <footer id="info">
+      <p>Double-click to edit a todo</p>
+      <p>
+        Created by
+        <a href="http://github.com/tomdale">Tom Dale</a>,
+        <a href="http://github.com/addyosmani">Addy Osmani</a>
+      </p>
+      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    </footer>
+  </script>
+
+  <!-- /* Handlebars templates end */ -->
+  <script src="../../assets/base.js"></script>
+  <script src="../../assets/jquery.min.js"></script>
+  <script src="js/libs/handlebars-1.0.rc.2.js"></script>
+  <script src="js/libs/ember.js"></script>
+  <script src="js/libs/ember-data.js"></script>
+  <script src="js/libs/local_storage_adapter.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/router.js"></script>
+  <script src="js/models/todo.js"></script>
+  <script src="js/models/store.js"></script>
+  <script src="js/controllers/todos_controller.js"></script>
+  <script src="js/controllers/todo_controller.js"></script>
+  <script src="js/views/todo_view.js"></script>
+  <script src="js/views/edit_todo_view.js"></script>
 </body>
 </html>
