Update to YUI 3.8

--- a/architecture-examples/yui/index.html
+++ b/architecture-examples/yui/index.html
@@ -56,11 +56,9 @@
 		{{/if}}
 	</script>
 	<script src="../../assets/base.js"></script>
-	<script src="http://yui.yahooapis.com/3.6.0pr4/build/yui/yui-min.js"></script>
+	<script src="http://yui.yahooapis.com/3.8.1/build/yui/yui-min.js"></script>
 	<script>
 		YUI({
-			filter: 'raw',
-			allowRollup: 'false',
 			groups: {
 				'todo-mvc': {
 					base: './js/',
