--- a/labs/architecture-examples/troopjs/js/widget/item.html
+++ b/labs/architecture-examples/troopjs/js/widget/item.html
@@ -1,12 +1,13 @@
 <%
 var i = data.i;
 var item = data.item;
+var title = data.itemTitle;
 var completed = item.completed;
 %>
 <li class="<%= (completed ? 'completed' : 'active') %>">
 	<div class="view" data-action="prepare(<%= i %>)">
 		<input class="toggle" type="checkbox" <%= (completed ? 'checked' : '') %> data-action="status(<%= i %>)">
-		<label><%= item.title %></label>
+		<label><%= title %></label>
 		<button class="destroy" data-action="delete(<%= i %>)"></button>
 	</div>
 	<input class="edit" data-action="commit(<%= i %>)">
