Correcting path to Backbone + TS app script.

--- a/labs/architecture-examples/typescript-backbone/index.html
+++ b/labs/architecture-examples/typescript-backbone/index.html
@@ -110,6 +110,6 @@ https://github.com/documentcloud/backbone/blob/master/examples/todos/index.html
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.9/backbone-min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js"></script>
-		<script src="js/todos.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
