Adding changelog items for 1.1.

--- a/index.html
+++ b/index.html
@@ -243,15 +243,25 @@
 		<hr>
 		<div class="row">
 			<div class="span4">
-				<h2>What's new in 1.0.x</h2>
-				<ul class="whats-new">
-					<li>All main apps have been completely rewritten for consistency</li>
-					<li>Routing has been added to many of these</li>
-					<li>We now have 40+ apps being worked on in Labs</li>
-					<li>We're using a kick-ass new template</li>
-					<li>Framework authors and contributors have been consulted to ensure our apps adhere to best practices</li>
-					<li>We're helping AMD users by adding AMD versions of many apps</li>
+			<h2>New in 1.1 - TBA</h2>
+			<ul class="whats-new">
+			<li>We now have 18 stable apps and 35 in labs. New since 1.0.1:
+				<ul>
+				<li>Dart</li>
+				<li>TypeScript + Backbone.js</li>
+				<li>TypeScript + AngularJS</li>
+				<li>Serenade.js</li>
+				<li>CanJS + RequireJS</li>
+				<li>Chaplin + Brunch</li>
+				<li>Thorax + Lumbar</li>
+				<li>CanJS replaced the JavaScriptMVC app</li>
 				</ul>
+			</li>
+			<li>Many app frameworks and libraries have been upgraded to the latest version</li>
+			<li>XSS issues in several apps have been resolved</li>
+			<li>The homepage got reorganized with new categories</li>
+			<li>Various consistency fixes across all apps</li>
+			</ul>
 			</div>
 			<div class="span4">
 				<h2>Selecting a Framework</h2>
