Site - collapse new apps by default

--- a/index.html
+++ b/index.html
@@ -244,16 +244,17 @@
 			<div class="span4">
 			<h2>New in 1.1 - TBA</h2>
 			<ul class="whats-new">
-			<li>We now have 18 stable apps and 35 in labs. New since 1.0.1:
-				<ul>
-				<li>Dart</li>
-				<li>TypeScript + Backbone.js</li>
-				<li>TypeScript + AngularJS</li>
-				<li>Serenade.js</li>
-				<li>CanJS + RequireJS</li>
-				<li>Chaplin + Brunch</li>
-				<li>Thorax + Lumbar</li>
-				<li>CanJS replaced the JavaScriptMVC app</li>
+			<li>We now have 18 stable apps and 35 in labs.
+				<a href="#" data-target="#new-apps" class="expander">New since 1.0.1 ▼</a>
+				<ul class="collapsed" id="new-apps">
+				<li><a href="architecture-examples/dart/web/">Dart</a></li>
+				<li><a href="labs/architecture-examples/typescript-backbone/">TypeScript + Backbone.js</a></li>
+				<li><a href="labs/architecture-examples/typescript-angular/">TypeScript + AngularJS</a></li>
+				<li><a href="labs/architecture-examples/serenadejs/">Serenade.js</a></li>
+				<li><a href="labs/dependency-examples/canjs_require/">CanJS + RequireJS</a></li>
+				<li><a href="labs/dependency-examples/chaplin-brunch/public/">Chaplin + Brunch</a></li>
+				<li><a href="labs/dependency-examples/thorax_lumbar/public/">Thorax + Lumbar</a></li>
+				<li><a href="architecture-examples/canjs/">CanJS</a> replaced the JavaScriptMVC app</li>
 				</ul>
 			</li>
 			<li>Many app frameworks and libraries have been upgraded to the latest version</li>
