Site - No-JS expander

--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
 			<h2>New in 1.1 - TBA</h2>
 			<ul class="whats-new">
 			<li>We now have 18 stable apps and 35 in labs.
-				<a href="#" data-target="#new-apps" class="expander">New since 1.0.1 ▼</a>
+				<label for="news-expander"><a>New since 1.0.1 ▼</a></label>
+				<input type="checkbox" id="news-expander">
 				<ul class="collapsed" id="new-apps">
 				<li><a href="architecture-examples/dart/web/">Dart</a></li>
 				<li><a href="labs/architecture-examples/typescript-backbone/">TypeScript + Backbone.js</a></li>
