Updated site and changelog for Kendo UI

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 						<a href="labs/architecture-examples/duel/www/" data-source="https://bitbucket.org/mckamey/duel/wiki/Home" data-content="DUEL is a dual-side templating engine using HTML for layout and 100% pure JavaScript as the binding language. The same views may be executed both directly in the browser (client-side template) and on the server (server-side template).">DUEL</a>
 					</li>
 					<li class="routing labs">
+						<a href="labs/architecture-examples/kendo/" data-source="http://www.kendoui.com/" data-content="Kendo UI is a comprehensive HTML5, JavaScript framework for modern web and mobile app development">Kendo UI</a>
+					</li>
+					<li class="routing labs">
 						<a href="labs/architecture-examples/puremvc/" data-source="http://puremvc.github.com" data-content="PureMVC is a lightweight framework for creating applications based upon the classic Model-View-Controller design meta-pattern.">PureMVC</a>
 					</li>
 					<li class="labs">
@@ -244,7 +247,7 @@
 			<div class="span4">
 			<h2>New in 1.1 - TBA</h2>
 			<ul class="whats-new">
-			<li>We now have 18 stable apps and 35 in labs.
+			<li>We now have 18 stable apps and 36 in labs.
 				<label for="news-expander"><a>New since 1.0.1 ▼</a></label>
 				<input type="checkbox" id="news-expander">
 				<ul class="collapsed" id="new-apps">
@@ -255,6 +258,7 @@
 				<li><a href="labs/dependency-examples/canjs_require/">CanJS + RequireJS</a></li>
 				<li><a href="labs/dependency-examples/chaplin-brunch/public/">Chaplin + Brunch</a></li>
 				<li><a href="labs/dependency-examples/thorax_lumbar/public/">Thorax + Lumbar</a></li>
+				<li><a href="labs/architecture-examples/kendo/">Kendo UI</a></li>
 				<li><a href="architecture-examples/canjs/">CanJS</a> replaced the JavaScriptMVC app</li>
 				</ul>
 			</li>
