--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -54,7 +54,7 @@
     </footer>
   </section>
   <footer id="info">
-    <p>Double-click to edit a todo.</p>
+    <p>Double-click to edit a todo</p>
     <p>Credits:
         <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
         <a href="http://ericbidelman.com">Eric Bidelman</a>,
