--- a/labs/dependency-examples/angularjs_require/index.html
+++ b/labs/dependency-examples/angularjs_require/index.html
@@ -63,7 +63,7 @@
     </footer>
   </section>
   <footer id="info">
-    <p>Double-click to edit a todo.</p>
+    <p>Double-click to edit a todo</p>
     <p>Credits:
         <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
         <a href="http://ericbidelman.com">Eric Bidelman</a>,
