--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
 					<li class="routing labs">
 						<a href="labs/dependency-examples/thorax_lumbar/public/" data-source="http://walmartlabs.github.com/lumbar" data-content="An opinionated, battle tested Backbone + Handlebars framework to build large scale web applications. This implementation uses Lumbar, a route based module loader.">Thorax + Lumbar</a>
 					</li>
+					<li class="routing labs">
+						<a href="labs/dependency-examples/flight/" data-source="http://twitter.github.com/flight" data-content="Flight is a lightweight, component-based JavaScript framework that maps behavior to DOM nodes. Twitter uses it for their web applications.">Flight</a>
+					</li>
 				</ul>
 				<hr>
 				<h2>Real-time</h2>
