--- a/labs/architecture-examples/kendo/index.html
+++ b/labs/architecture-examples/kendo/index.html
@@ -46,7 +46,7 @@
 	</section>
 	<div id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Credits <a href="https://github.com/bsatrom">Brandon Satrom</a>, <a href="https://github.com/burkeholland">Burke Holland</a> &nbsp; <a href="https://github.com/akorchev">Atanas Korchev</a></p>
+		<p>Credits <a href="https://github.com/bsatrom">Brandon Satrom</a>, <a href="https://github.com/burkeholland">Burke Holland</a> &amp; <a href="https://github.com/akorchev">Atanas Korchev</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</div>
 	<script type="text/template" id="item-template">
