Update date on changelogs

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 		<hr>
 		<div class="row">
 			<div class="span4">
-			<h2>New in 1.1 - TBA</h2>
+			<h2>New in 1.1 - 2013-02-14</h2>
 			<ul class="whats-new">
 			<li>We now have 18 stable apps and 36 in labs.
 				<label for="news-expander"><a>New since 1.0.1 ▼</a></label>
