--- a/labs/architecture-examples/typescript-backbone/index.html
+++ b/labs/architecture-examples/typescript-backbone/index.html
@@ -1,45 +1,45 @@
 ﻿<!-- ---------------------------------------------------------------------------------------
 index.html
-Microsoft grants you the right to use these script files under the Apache 2.0 license. 
-Microsoft reserves all other rights to the files not expressly granted by Microsoft, 
-whether by implication, estoppel or otherwise. The copyright notices and MIT licenses 
+Microsoft grants you the right to use these script files under the Apache 2.0 license.
+Microsoft reserves all other rights to the files not expressly granted by Microsoft,
+whether by implication, estoppel or otherwise. The copyright notices and MIT licenses
 below are for informational purposes only.
 
 Portions Copyright © Microsoft Corporation
 Apache 2.0 License
 
-Licensed under the Apache License, Version 2.0 (the "License"); you may not use this 
+Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
 file except in compliance with the License. You may obtain a copy of the License at
 http://www.apache.org/licenses/LICENSE-2.0
 
-Unless required by applicable law or agreed to in writing, software distributed under 
-the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF 
+Unless required by applicable law or agreed to in writing, software distributed under
+the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
 ANY KIND, either express or implied.
 
-See the License for the specific language governing permissions and limitations 
+See the License for the specific language governing permissions and limitations
 under the License.
 ------------------------------------------------------------------------------------------
 Provided for Informational Purposes Only
 MIT License
-Permission is hereby granted, free of charge, to any person obtaining a copy of this 
-software and associated documentation files (the "Software"), to deal in the Software 
-without restriction, including without limitation the rights to use, copy, modify, merge, 
-publish, distribute, sublicense, and/or sell copies of the Software, and to permit 
+Permission is hereby granted, free of charge, to any person obtaining a copy of this
+software and associated documentation files (the "Software"), to deal in the Software
+without restriction, including without limitation the rights to use, copy, modify, merge,
+publish, distribute, sublicense, and/or sell copies of the Software, and to permit
 persons to whom the Software is furnished to do so, subject to the following conditions:
 
-The above copyright notice and this permission notice shall be included in all copies 
+The above copyright notice and this permission notice shall be included in all copies
 or substantial portions of the Software.
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, 
-INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR 
-PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE 
-FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR 
-OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER 
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
+PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
+FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
+OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 DEALINGS IN THE SOFTWARE.
 ---------------------------------------------------------------------------------------
 
 index.html
-https://github.com/documentcloud/backbone/blob/master/examples/todos/index.html 
+https://github.com/documentcloud/backbone/blob/master/examples/todos/index.html
 -->
 
 <!doctype html>
@@ -106,10 +106,10 @@ https://github.com/documentcloud/backbone/blob/master/examples/todos/index.html
 			<% } %>
 		</script>
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.9/backbone-min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js"></script>
+		<script src="../../../assets/jquery.min.js"></script>
+		<script src="../../../assets/lodash.min.js"></script>
+		<script src="js/libs/backbone/backbone.js"></script>
+		<script src="js/libs/backbone/backbone.localStorage.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
