--- a/dependency-examples/flight/index.html
+++ b/dependency-examples/flight/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Flight • Todo</title>
-		<link rel="stylesheet" href="../../../assets/base.css">
+		<link rel="stylesheet" href="../../assets/base.css">
 	</head>
 <body>
 	<section id="todoapp">
