AngularJS: Title consistency fix

--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>AngularJS - TodoMVC</title>
+	<title>AngularJS • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
 	<style>[ng-cloak] {display: none}</style>
 	<!--[if IE]>
